2008-02-25  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/configurationwizard.py:
	Add an new API to fetch a wizard entries

	* flumotion/component/consumers/httpstreamer/httpstreamer_wizard.py:
	* flumotion/wizard/conversionsteps.py:
	* flumotion/wizard/productionsteps.py:
	Use the new API here.

	* flumotion/manager/admin.py:
	Fix a syntax typo in a doc string

2008-02-25  Michael Smith <msmith@fluendo.com>

	* flumotion/component/misc/httpserver/ratecontrol.py:
	  Rewrite buffer handling to avoid doing so many buffer copies, in an
	  attempt to make it use less cpu.
	  Mostly unsuccessful.

2008-02-25  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	Do not unconditionally append the result of remove_all_clients, it might
	return None if the components bootstrap failed.

	* flumotion/component/consumers/httpstreamer/httpstreamer_wizard.py: 
	Use the registry data before trying to instantiate the plugin, avoids
	importing a plugin which is not supported.

2008-02-25  Arek Korbik  <arkadini@gmail.com>

	* flumotion/common/medium.py (PingingMedium._ping):
	Add errback handler for the 'ping' remote call.

2008-02-25  Johan Dahlin  <johan@gnome.org>

	* flumotion/test/test_wizard_save.py: remove the now unused socket attribute too.

2008-02-25  Michael Smith <msmith@fluendo.com>

	* flumotion/test/test_wizard_save.py:
	  Fix up test now that we're not writing the socket.

2008-02-25  Michael Smith <msmith@fluendo.com>

	* flumotion/component/plugs/cortado/cortado_wizard.py:
	  Remove 'socket' here; no longer needed since the config writer doesn't
	  use it now.

2008-02-25  Michael Smith <msmith@fluendo.com>

	* flumotion/common/config.py:
	  Nothing uses the 'socket' attribute on a plug. So, make it
	  optional/deprecated.
	* flumotion/manager/config.py:
	  Don't write the deprecated socket attribute.
	* flumotion/wizard/configurationwriter.py:
	  Don't write the deprecated socket attribute.
